# collision-free-mixed-integer-planning-for-uavs

./: .gitignore  :w  CMakeLists.txt  README.md  ]  cmake_make  obstacles.urdf  office.urdf
include/: test.h  trajectory_optimization.h
include/controller/: tvlqr.h
include/plot/: plotter.h
include/simulate/: publish_trajectory.h  simulate.h
include/test/: tests.h
include/tools/: ConvexHull.h  geometry.h
include/trajopt/: .MISOSProblem.h.swo  MISOSProblem.h  PPTrajectory.h  safe_regions.h
models/: obstacles.urdf  obstacles_corridors.urdf  obstacles_forrest.urdf  obstacles_groups.urdf  obstacles_simple.urdf  obstacles_walls.urdf
output/: Slides.pptx
output/videos/: generating_convex_regions.mov
src/: .trajectory_optimization.cpp.swo  main.cpp  test_visualize.cpp  trajectory_optimization.cpp
src/controller/: tvlqr.cpp
src/plot/: plotter.cpp
src/simulate/: publish_trajectory.cpp  simulate.cpp
src/test/: tests.cpp
src/tools/: ConvexHull.cpp  geometry.cpp  show_trajectory.py
src/trajopt/: MISOSProblem.cpp  PPTrajectory.cpp  safe_regions.cpp
